--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -110,7 +111,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<finalName>uber-${artifactId}-${version}</finalName>
+					<finalName>uber-${project.artifactId}-${project.version}</finalName>
 				</configuration>
 			</plugin>
 			<plugin>
