--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,11 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>src/main</sourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
 		<resources>
 			<resource>
-				<directory>src/ru/bpmink/resources</directory>
+				<directory>src/main/ru/bpmink/resources</directory>
 			</resource>
 		</resources>
 		<plugins>
@@ -130,7 +131,7 @@
 								<artifactItem>
 									<groupId>ru.bpmink</groupId>
 									<artifactId>ibm-bpm-rest-client</artifactId>
-									<version>0.0.2</version>
+									<version>${project.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
 								</artifactItem>
@@ -152,7 +153,7 @@
 						</goals>
 						<configuration>
 							<configLocation>checkstyle.xml</configLocation>
-							<encoding>UTF-8</encoding>
+							<encoding>${project.build.sourceEncoding}</encoding>
 							<failsOnError>true</failsOnError>
 							<failOnViolation>true</failOnViolation>
 							<violationSeverity>warning</violationSeverity>
