--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
 		<gson.version>2.3.1</gson.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<logback.version>1.1.3</logback.version>
-	</properties>
+        <testng.version>6.9.10</testng.version>
+    </properties>
 
 	<licenses>
 		<license>
@@ -54,7 +55,12 @@
 			<artifactId>jsr305</artifactId>
 			<version>${annotations.version}</version>
 		</dependency>
-		<dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.version}</version>
+        </dependency>
+        <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
@@ -75,11 +81,12 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${commons.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -90,6 +97,11 @@
 				<directory>src/main/ru/bpmink/resources</directory>
 			</resource>
 		</resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/ru/bpmink/resources</directory>
+            </testResource>
+        </testResources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
